add method updatePhoto
